# workout_api

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7327c4d606d9_migration.py  7a029e20fc40_init_db.py
app/: __init__.py  main.py  routers.py
app/atleta/: controller.py  models.py  schemas.py
app/categorias/: controller.py  models.py  schemas.py
app/centro_treinamento/: controller.py  models.py  schemas.py
app/configs/: database.py  settings.py
app/contrib/: dependencies.py  models.py  schemas.py
app/contrib/repository/: models.py
